# eloqkv

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  KVT_IMPLEMENTATION_PLAN.md  KVT_TECHNICAL_ANALYSIS.md  LICENSE  README.md  build_cass_driver.cmake  build_eloq_log_service.cmake  build_eloq_metrics.cmake  build_log_service.cmake  build_tx_service.cmake  eloqkv.ini
.github/ISSUE_TEMPLATE/: test
.github/workflows/: Clang-format-checker.yml  reviewdog.yml
concourse/artifact/: eloqkv.ini
concourse/pipeline/: build_debug_tarball.yml  build_nightly_tarball.yml  build_release_tarball.yml  build_tarball_open.yml  log.pr.ent.yml  main.ent.yml  main.yml  pr.ent.yml  pr.yml  tag.yml
concourse/scripts/: build_and_update.sh  build_tarball.bash  build_tarball_open.bash  cleanup_minio_bucket.py  common.sh  compile_test_main.bash  compile_test_redis.bash  log.pr.ent.bash  main.bash  main.ent.bash  pr.ent.bash  standby_test.bash  tag.sh
concourse/tasks/: build_debug_tarball.yml  build_nightly_tarball.yml  build_release_tarball.yml  build_tarball_open.yml  compile_test_main.yml  compile_test_redis.yml  log.pr.ent.yml  log.pr.net.yml  main.ent.yml  main.yml  pr.ent.yml  tag.yml
doc/: cursor_update_plan_for_kvt_command_impl.md  kvt.md  kvt_plan.md
docs/: issues.md  tigerbeetle-integration.md
eloq_kvt/: CLAUDE.md  Makefile  Makefile.FULL  Makefile.MEM  README.md  design.md  kvt_inc.h  kvt_mem.cpp  kvt_mem.h  kvt_sample.cpp  kvt_stress_test.cpp
fpconv/: CMakeLists.txt
include/: INIReader.h  eloq_algorithm.h  eloq_catalog_factory.h  eloq_key.h  eloq_log_wrapper.h  eloq_string.h  eloqkv_ascii_logo.h  glog_error_logging.h  ini.h  kvt_inc.h  kvt_manager.h  lua_interpreter.h  lua_output_handler.h  metrics_registry_impl.h  output_handler.h  pub_sub_manager.h  redis_command.h  redis_connection_context.h  redis_errors.h  redis_handler.h  redis_hash_object.h  redis_list_object.h  redis_metrics.h  redis_object.h  redis_rdb_restore.h  redis_replier.h  redis_service.h  redis_set_object.h  redis_stats.h  redis_string_match.h  redis_string_num.h  redis_string_object.h  redis_zset_object.h  tb_handler.h  tb_types.h  wasm_host.h
include/redis/: atomicvar.h  commands.def  commands.h  config.h  dict.h  fmacros.h  monotonic.h  mt19937-64.h  server.h  solarisfixes.h  zmalloc.h
include/store_handler/: cass_handler.h  cass_handler_typed.h  cass_scanner.h  data_store.h  data_store_factory.h  data_store_fault_inject.h  data_store_service.h  data_store_service_client.h  data_store_service_config.h  data_store_service_scanner.h  data_store_service_util.h  ds_request.proto  dynamo_handler.h  dynamo_handler_typed.h  dynamo_scanner.h  kv_store.h  partition.h  rocksdb_cloud_data_store.h  rocksdb_cloud_data_store_factory.h  rocksdb_config.h  rocksdb_handler.h  rocksdb_scanner.h  store_util.h  thread_worker_pool.h
kvt_sample/: CLAUDE.md  Makefile  design.md  final_test.cpp  kvt_impl.cpp  kvt_inc.h  kvt_mem.cpp  kvt_mem.h  kvt_sample.cpp  kvt_stress_test.cpp  simple_test.cpp
lua/: CMakeLists.txt
lua/src/: lua_cjson.c  luaconf.h
scripts/: docker-entrypoint.sh  git-checkout.sh  git-tag.sh  install_dependency_ubuntu2404.sh
scripts/dep/ubuntu/: 00-system.sh
src/: INIReader.cpp  eloq_algorithm.cpp  eloq_catalog_factory.cpp  eloq_key.cpp  eloq_string.cpp  ini.c  kvt_inc.cpp  kvt_manager.cpp  kvt_stress_test.cpp  kvt_test.cpp  kvt_wrapper.cpp  lua_interpreter.cpp  metrics_registry_impl.cpp  pub_sub_manager.cpp  redis_cli.cpp  redis_command.cpp  redis_connection_context.cpp  redis_errors.cpp  redis_handler.cpp  redis_hash_object.cpp  redis_list_object.cpp  redis_object.cpp  redis_rdb_restore.cpp  redis_replier.cpp  redis_server.cpp  redis_service.cpp  redis_set_object.cpp  redis_stats.cpp  redis_string_match.cpp  redis_string_object.cpp  redis_zset_object.cpp  tb_handler.cpp  tb_types.cpp  wasm_host.cpp
src/redis/: commands.c  dict.c  monotonic.c  mt19937-64.c  siphash.c  zmalloc.c
src/store_handler/: cass_handler.cpp  cass_handler_typed.cpp  cass_scanner.cpp  data_store_fault_inject.cpp  data_store_service.cpp  data_store_service_client.cpp  data_store_service_config.cpp  data_store_service_scanner.cpp  dynamo_handler.cpp  dynamo_handler_typed.cpp  dynamo_scanner.cpp  rocksdb_cloud_data_store.cpp  rocksdb_config.cpp  rocksdb_handler.cpp  rocksdb_scanner.cpp  store_util.cpp  thread_worker_pool.cpp
src/tools/eloqkv2aof/: eloqkv2aof.cpp  test_io_write.cpp  test_result.md
src/tools/eloqkv2rdb/: eloqkv2rdb.cpp
tests/: test_helper.tcl  test_report.md
tests/lua_beetle/: README.md  run_tests.sh  sanity_test.py  sanity_test_eloqkv_tb.py  stress_test_eloqkv_tb.py
tests/lua_beetle/tb_sanity/: go.sum  main.go  tb_sanity
tests/support/: server.tcl  util.tcl
tests/unit/eloq/: dump.tcl
tests/unit/mono/: bitfield.tcl  bitops.tcl  client.tcl  cluster_cmds.tcl  dbsize.tcl  dump.tcl  expire.tcl  hash.tcl  introspection-2.tcl  list-2.tcl  list-3.tcl  list.tcl  multi.tcl  multi2.tcl  object_max_size.tcl  object_serialize_deserialize_test.cpp  scan.tcl  scripting.tcl  set.tcl  slowlog.tcl  sort.tcl  string.tcl  zset.tcl
tests/unit/mono/flaky_test/: pubsub.tcl
tests/unit/mono/log_replay_test/: log_replay_test.py  requirements.txt
tests/unit/type/: string.tcl
wasm/: Makefile  guest1.cpp  guest_common.cpp  guest_common.h  guest_echo.cpp
